[project]
name = "python-excel-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "aloisiomartinez",email = "aloisiojacobs36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
