[project]
name = "python-excel-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "aloisiomartinez",email = "aloisiojacobs36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings-python (>=2.0.3,<3.0.0)",
    "pygments (>=2.20.0,<3.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "pymdown-extensions (>=10.21.3,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
pythonpath = ["."]
known_third_party = []